apps/syncthing/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  labels:
    app.kubernetes.io/name: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syncthing
    spec:
      nodeSelector:
        kubernetes.io/hostname: helium
      containers:
        - name: syncthing
          image: syncthing/syncthing:latest
          ports:
            - name: http
              containerPort: 8384
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /var/syncthing
          livenessProbe:
            httpGet:
              path: /rest/noauth/health
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /rest/noauth/health
              port: http
            periodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: syncthing-data
