apps/syncthing/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  labels:
    app.kubernetes.io/name: syncthing
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8384
      targetPort: 8384
  selector:
    app.kubernetes.io/name: syncthing
